<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_A_title"
        android:layout_gravity="center"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="25dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mBtnBS"
            android:text="@string/button_1"
            android:layout_margin="1dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mBtnCS"
            android:text="@string/button_2"
            android:layout_margin="1dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mBtnAF"
            android:text="@string/button_3"
            android:layout_margin="1dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mBtnDlg"
            android:text="@string/button_4"
            android:layout_margin="1dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_LML"
        android:textSize="25sp"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:id="@+id/mTVlml"
        android:scrollbars="vertical"
        android:layout_gravity="top|start"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_AS"
        android:textSize="25sp"
        android:paddingTop="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:id="@+id/mTVas"
        android:scrollbars="vertical"
        android:layout_gravity="top|start"/>
</LinearLayout>